<resources>
    <string name="app_name">Cast to TV - Screen Mirroring</string>
    <string name="next">Next</string>
    <string name="title_1">Cast to TV</string>
    <string name="desc_1">Experience the magic of casting your favorite content to the big screen effortlessly.</string>
    <string name="title_2">Screen Mirroring</string>
    <string name="desc_2">Mirror your device screen to share moments, presentations, and entertainment in real-time.</string>
    <string name="title_3">Video Player</string>
    <string name="desc_3">Our cutting-edge video player delivers stunning visuals and immersive sound for an unforgettable entertainment journey.</string>
    <string name="cast_to_tv">Cast to TV</string>
    <string name="video_player">Video Player</string>
    <string name="refer_a_friend">Refer a Friend</string>
    <string name="screen_mirroring">Screen Mirroring</string>
    <string name="main">Main</string>
    <string name="required_permission">Required Permission</string>
    <string name="external_storage_allow_to_access_photos_and_media_on_your_device"><font color="#ffffff" size="18"><b>External Storage</b> </font>\n<font color="#BFffffff" size="16">Allow to access photos and media on your device.</font></string>
    <string name="grant_permission">Grant Permission</string>
    <string name="rate_us">Rate Us!</string>
    <string name="do_you_want_to_really_exit">Do you want to really exit ?</string>
    <string name="go_back">Go Back</string>
    <string name="exit">Exit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connect_to_a_device">Connect to a device</string>
    <string name="no_device_found">No device found</string>
    <string name="make_sure_your_phone_and_cast_device_are_connected_to_the_same_wi_fi">Make sure your phone and cast device are connected to the same Wi-Fi</string>
    <string name="choose_connect_you_want">Choose connect you want</string>
    <string name="how_to_start_screen_mirroring">How to Start Screen Mirroring ?</string>
    <string name="no_videos_found">No Videos Found</string>
    <string name="no_images_found">No Images Found</string>
    <string name="no_audios_found">No Audios Found</string>
    <string name="online_images">Online Images</string>
    <string name="web_browser">Web Browser</string>
    <string name="smart_tv">Smart TV</string>
    <string name="mirroring_web_browser">Mirroring Web Browser</string>
    <string name="start_mirroring">Start Mirroring</string>
    <string name="_1_make_sure_your_phone_and_cast_device_are_connected_to_the_same_wi_fi">1. Make sure your phone and cast device are connected to the same Wi-Fi</string>
    <string name="_2_open_this_website_on_the_other_device">2. Open this website on the other device:</string>
    <string name="http_192_168_0_155_2904">http://192.168.0.155:2904</string>
    <string name="_3_click_start_mirroring">3. Click “Start Mirroring”</string>
    <string name="how_to_start_screen_mirroring_t">How to Start Screen Mirroring</string>
    <string name="_1_make_sure_your_phone_and_tv_connected_to_the_same_wi_fi_network">1. Make sure your phone and TV connected to the same Wi-Fi network</string>
    <string name="_2_click_to_select_screen_mirroring_feature">2. Click to select screen Mirroring Feature</string>
    <string name="_3_click_the_start_mirroring_button_to_start_using_the_feature">3. Click the start mirroring button to start using the feature</string>
    <string name="_4_connection_successful_now_your_phone_screen_is_displayed_on_the_tv">4. Connection successful. Now your phone screen is displayed on the TV</string>
    <string name="start_screen_mirroring">Start Screen Mirroring</string>
</resources>