<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".Activity.HelpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="@dimen/_25sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp"
            android:src="@drawable/backbt" />

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/how_to_start_screen_mirroring_t"
            android:textColor="@color/green"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp"
            android:src="@drawable/refresh"
            android:visibility="invisible" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="afterDescendants"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/_1_make_sure_your_phone_and_tv_connected_to_the_same_wi_fi_network"
                android:textColor="#CCFFFFFF"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:adjustViewBounds="true"
                android:maxHeight="@dimen/_120sdp"
                android:src="@drawable/h1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/_2_click_to_select_screen_mirroring_feature"
                android:textColor="#CCFFFFFF"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:adjustViewBounds="true"
                android:maxHeight="@dimen/_160sdp"
                android:src="@drawable/h2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/_3_click_the_start_mirroring_button_to_start_using_the_feature"
                android:textColor="#CCFFFFFF"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:adjustViewBounds="true"
                android:maxHeight="@dimen/_120sdp"
                android:src="@drawable/h3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/_4_connection_successful_now_your_phone_screen_is_displayed_on_the_tv"
                android:textColor="#CCFFFFFF"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:adjustViewBounds="true"
                android:maxHeight="@dimen/_140sdp"
                android:src="@drawable/phone_to_tv" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/start_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_20sdp"
        android:translationZ="@dimen/_2sdp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_8sdp">

        <TextView
            android:id="@+id/help_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btm_nav_bg"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_8sdp"
            android:text="@string/start_mirroring"
            android:textColor="@color/green"
            android:textSize="14sp" />

        <!--                android:drawableStart="@drawable/infocircle"-->
        <!--                android:drawablePadding="@dimen/_10sdp"-->

    </androidx.cardview.widget.CardView>

</LinearLayout>