<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".Fragments.ScreenMirroringFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="@dimen/_25sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp"
            android:src="@drawable/backbt" />

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/screen_mirroring"
            android:textColor="@color/green"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp"
            android:src="@drawable/refresh"
            android:visibility="invisible" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:descendantFocusability="afterDescendants"
            android:orientation="vertical"
            android:paddingBottom="90dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/make_sure_your_phone_and_cast_device_are_connected_to_the_same_wi_fi"
                android:textColor="#CCFFFFFF"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:adjustViewBounds="true"
                android:maxHeight="@dimen/_140sdp"
                android:src="@drawable/phone_to_tv" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/choose_connect_you_want"
                android:textColor="#CCFFFFFF"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cast_to_tv_bt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/db_bt_bg_1"
                    android:drawableTop="@drawable/tv"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:padding="@dimen/_15sdp"
                    android:text="@string/cast_to_tv"
                    android:textColor="@color/green"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/video_player_bt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/db_bt_bg_1"
                    android:drawableTop="@drawable/web_browser"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:padding="@dimen/_15sdp"
                    android:text="@string/video_player"
                    android:textColor="@color/green"
                    android:textSize="16sp" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/help_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_20sdp"
                android:translationZ="@dimen/_2sdp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="@dimen/_12sdp"
                app:cardElevation="@dimen/_8sdp">

                <TextView
                    android:id="@+id/grant_permission_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/btm_nav_bg"
                    android:drawableStart="@drawable/infocircle"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:text="@string/how_to_start_screen_mirroring"
                    android:textColor="@color/green"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>