<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Activity.PermissionsActivity">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/required_permission"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:adjustViewBounds="true"
        android:maxWidth="@dimen/_150sdp"
        android:maxHeight="@dimen/_150sdp"
        android:src="@drawable/perm_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_tv" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:layout_marginTop="76dp"
        android:background="@drawable/db_bt_bg_1"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/perm" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:text="@string/external_storage_allow_to_access_photos_and_media_on_your_device" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/checkbox"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="@dimen/_250sdp"
            app:strokeColor="@color/green"
            app:strokeWidth="@dimen/_1sdp">

            <ImageView
                android:id="@+id/tick_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/tick"
                android:visibility="gone" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/grant_permission_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="@dimen/_2sdp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/grant_permission_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btm_nav_bg"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_8sdp"
            android:text="@string/grant_permission"
            android:textColor="@color/green"
            android:textSize="14sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>